# ComfyUI-Wan-Video-Integrated-KSampler

./: .gitignore  README-en.md  README.md  nodes.py  pyproject.toml  requirements.txt  utils.py  video_workflow_example.json  自动汉化节点.bat
ComfyUI-DD-Translation/zh-CN/Nodes/: ComfyUI-Wan-Video-Integrated-KSampler.json
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
